# chew-broadcaster

./: .gitmodules  CMakeLists.txt  Changelog  HowtoDebugXcode.txt
cmake/: ALL_BUILD.vcxproj.user.in
cmake/Modules/: CopyMSVCBins.cmake  ObsCpack.cmake
cmake/osxbundle/: Chew.icns  Info.plist  QtWebEngineProcess.plist  fixup_bundle.sh  obslaunch.sh
install-utils/install/osx/: build_app.py  build_chew.sh  dmgspec.json
install-utils/install/win/: ChewMakeRedistributable.sh  obs-studio.nsi
libobs-d3d11/: d3d11-subsystem.cpp
obs/: CMakeLists.txt  obs-app.cpp  obs-app.hpp  window-basic-main-profiles.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-settings.cpp  window-basic-settings.hpp
obs/chew/: ChewBroadcasterVersion.h.in  ChewHtmlProxy.cpp  ChewHtmlProxy.h  ChewUtilities.cpp  ChewUtilities.h  ChewWebDialog.cpp  ChewWebDialog.h
obs/data/locale/: ar-SA.ini  bg-BG.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  eu-ES.ini  fi-FI.ini  fr-FR.ini  gl-ES.ini  he-IL.ini  hr-HR.ini  hu-HU.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  lt-LT.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ro-RO.ini  ru-RU.ini  sk-SK.ini  sl-SI.ini  sr-CS.ini  sr-SP.ini  sv-SE.ini  tr-TR.ini  uk-UA.ini  vi-VN.ini  zh-CN.ini  zh-TW.ini
obs/forms/: ChewWebDialog.ui  OBSBasic.ui  OBSBasicSettings.ui  OBSLicenseAgreement.ui
plugins/: CMakeLists.txt
plugins/text-dwrite/: CMakeLists.txt  text-dwrite-main.cpp  text-dwrite.cpp  text-dwrite.hpp
plugins/text-dwrite/data/locale/: en-US.ini
(+6 files in other folders)
